--- a/src/pages/toDo/index.module.css
+++ b/src/pages/toDo/index.module.css
@@ -30,6 +30,7 @@
   color: rgb(39, 136, 39);
   margin: 10px;
   transition: all .2s;
+  cursor: pointer;
 }
 .dialog_mask {
   width: 100vw;
@@ -61,6 +62,11 @@
   font-weight: bold;
 }
 .card:hover {
+  transition: all .2s;
+  transform: scale(.98);
+  box-shadow: 0px 8px 0px 0px rgb(82, 196, 1);
+}
+.active {
   transition: all .2s;
   transform: scale(.98);
   box-shadow: 0px 8px 0px 0px rgb(82, 196, 1);
