--- a/src/pages/toDo/index.module.css
+++ b/src/pages/toDo/index.module.css
@@ -67,9 +67,12 @@
   box-shadow: 0px 8px 0px 0px rgb(82, 196, 1);
 }
 .active {
+
+  border-color: rgb(187, 195, 63);
+  color: rgb(187, 195, 63);
   transition: all .2s;
   transform: scale(.98);
-  box-shadow: 0px 8px 0px 0px rgb(82, 196, 1);
+  box-shadow: 0px 8px 0px 0px rgb(187, 195, 63);
 }
 .toDoAction {
   transition: all .2s;
