--- a/src/pages/toDo/index.module.css
+++ b/src/pages/toDo/index.module.css
@@ -21,6 +21,17 @@
   flex-wrap: wrap;
   overflow: hidden;
 }
+@media screen and (max-width: 500px) {
+  .heroBanner {
+    padding: 2rem;
+  }
+  .card {
+    min-width: 90% !important;
+  }
+  .main {
+  justify-content: center;
+}
+}
 .card {
   min-width: 400px;
   padding: 15px;
