--- a/src/pages/tools/index.module.css
+++ b/src/pages/tools/index.module.css
@@ -14,46 +14,46 @@
     padding: 2rem;
   }
 }
-
+@media screen and (max-width: 500px) {
+  .main .leftMmenu {
+    height: 40px;
+    display: flex;
+    flex-wrap: nowrap;
+  }
+}
 .main {
   margin: 2px;
   padding: 5px;
-  display: flex;
   flex-wrap: wrap;
   overflow: hidden;
   border: 1px solid #ccc;
   border-radius: 10px;
 }
-@media screen and (max-width: 500px) {
-  .heroBanner {
-    padding: 2rem;
-  }
-  .tools {
-    min-width: 90% !important;
-  }
-  .main {
-    justify-content: center;
-  }
-}
+
 .frame {
-  flex: 1;
+  width: 95%;
+  height: 80vh;
 }
 .leftMmenu {
-  max-width: 200px;
-  height: 80vh;
+  display: flex;
+  border-bottom: 1px solid #ccc;
+
   overflow: auto;
+}
+.dark .leftMmenu {
+  color: #ccc;
 }
 .tools {
   padding: 8px;
   padding-top: 0;
-  border-left: 2px solid rgb(82, 196, 1);
-  color: rgb(25, 24, 24);
   margin: 10px;
   transition: all 0.2s;
   cursor: pointer;
+  border-bottom: 2px solid transparent;
 }
 .tools p {
   margin: 0;
+  white-space: nowrap;
 }
 .tools span {
   font-weight: bold;
@@ -65,6 +65,7 @@
 }
 .active {
   color: rgb(82, 196, 1);
+  border-bottom: 2px solid rgb(82, 196, 1);
   transition: all 0.2s;
   transform: scale(0.98);
 }
