--- a/src/pages/resource/index.module.css
+++ b/src/pages/resource/index.module.css
@@ -22,7 +22,7 @@
   flex-wrap: wrap;
 }
 .card {
-  width: 300px;
+  width: 350px;
   margin: 5px;
   display: flex;
   border: 1px solid #ccc;
@@ -45,20 +45,25 @@
 }
 .cardImage {
   border-radius: 10px;
-  flex: 0.4;
+  flex: 0.35;
   height: 80%;
   overflow: hidden;
 }
 .cardImage img {
   height: 100%;
+  width: 100%;
 }
 .cardR {
-  flex: 0.6;
+  flex: 0.65;
   padding-left: 15px;
 }
 .cardR div {
   font-weight: bold;
   font-size: 16px;
+}
+.cardR div:nth-child(2) {
+  font-weight: normal;
+  font-size: 14px;
 }
 .cardR:hover div {
   color: #2e8555;
@@ -71,5 +76,5 @@
   display: flex;
   border-top: 1px solid #ccc;
   justify-content: space-between;
-  padding: 0 10px;
+  padding: 2px 10px;
 }
