--- a/src/pages/myProject/index.module.css
+++ b/src/pages/myProject/index.module.css
@@ -14,95 +14,71 @@
     padding: 2rem;
   }
 }
-
 .main {
-  padding: 20px;
   display: flex;
   flex-wrap: wrap;
-  overflow: hidden;
+  justify-content: center;
+}
+.rightContent {
+  border-left: 1px solid rgb(255, 255, 255);
+  flex: 1;
+  display: flex;
+  flex-wrap: wrap;
 }
 .card {
-  min-width: 400px;
-  padding: 15px;
-  padding-top: 0;
-  border: 2px solid rgb(82, 196, 1);
-  border-radius: 15px;
-  color: rgb(39, 136, 39);
+  width: 400px;
   margin: 10px;
+  display: flex;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  height: 200px;
+  flex-direction: column;
   transition: all 0.2s;
   cursor: pointer;
-}
-.dialog_mask {
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
-  top: 0px;
-  left: 0;
-  background: rgba(221, 220, 231, 0.5);
-}
-.dialog {
-  position: fixed;
-  top: calc(50% - 200px);
-  left: calc(50% - 200px);
-  background: rgba(221, 220, 231, 0.8);
-}
-.card p {
-  margin: 0;
-}
-.card p:nth-child(1) {
-  margin-top: 3px;
-  padding: 0 6px;
-  border-radius: 50%;
-  line-height: 20px;
-  float: right;
-  border: 1px solid;
-  text-align: right;
-}
-.card span {
-  font-weight: bold;
 }
 .card:hover {
+  box-shadow: 5px 5px 5px 5px rgba(180, 180, 186, 0.2);
+  transform: scale(1.02);
   transition: all 0.2s;
-  transform: scale(0.98);
-  box-shadow: 0px 8px 0px 0px rgb(82, 196, 1);
 }
-.active {
-  border-color: rgb(187, 195, 63);
-  color: rgb(187, 195, 63);
-  transition: all 0.2s;
-  transform: scale(0.98);
-  box-shadow: 0px 8px 0px 0px rgb(187, 195, 63);
-}
-.toDoAction {
-  transition: all 0.2s;
-  padding-right: 20px;
+
+.cardContent {
   display: flex;
-  flex-direction: row-reverse;
+  flex: 1;
+  padding: 20px;
 }
-.toDoAction a {
-  margin-left: 20px;
+.cardImage {
+  border-radius: 10px;
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
 }
-.timeOut {
-  transition: all 0.2s;
-  border-color: red;
-  color: rgb(178, 98, 98);
+.cardImage img {
+  height: 100%;
+  width: 100%;
 }
-.timeOut:hover {
-  box-shadow: 0px 8px 0px 0px red;
+.cardR {
+  flex: 1;
+  padding-left: 15px;
 }
-.ToDoTab {
-  display: flex;
-  justify-content: center;
-  margin-top: 5px;
+.cardR div {
+  font-weight: bold;
+  font-size: 16px;
 }
-.ToDoTab span {
-  margin-left: 10px;
-  display: inline-block;
-  padding: 0 10px;
-  cursor: pointer;
-  border: 1px solid #aeb9b3;
-  border-radius: 3px;
+.cardR div:nth-child(2) {
+  font-weight: normal;
+  font-size: 14px;
 }
-.ToDoTab span:hover {
+.cardR:hover div {
   color: #2e8555;
+  transition: all 0.2s;
+}
+.cardR p {
+  font-size: 14px;
+}
+.cardLink {
+  display: flex;
+  border-top: 1px solid #ccc;
+  justify-content: space-between;
+  padding: 2px 10px;
 }
