修改样式 添加博客

--- a/src/pages/workPlan/index.module.css
+++ b/src/pages/workPlan/index.module.css
@@ -9,16 +9,15 @@
   position: relative;
 }
 
-.workPlanCard ,.workPlanEdit{
+.workPlanCard,
+.workPlanEdit {
   padding: 20px;
   width: 500px;
   margin: 20px auto;
   border-radius: 10px;
-  box-shadow:  20px 20px 60px #d5d5d5,
-             -20px -20px 60px #ffffff;
+  box-shadow: 20px 20px 60px #d5d5d5, -20px -20px 60px #ffffff;
 }
 .workPlanEdit {
-
 }
 .input {
   width: 80%;
@@ -29,14 +28,16 @@
 .del {
   width: 15%;
 }
-.del,.add,.copy {
+.del,
+.add,
+.copy {
   padding: 10px 20px;
   margin-left: 10px;
   border-radius: 5px;
   border: none;
   color: #fff;
   font-size: 14px;
-  background:#f56c6c;
+  background: #f56c6c;
   cursor: pointer;
 }
 .add {
@@ -44,17 +45,18 @@
   background: #409eff;
 }
 .copy {
-   width: 40%;
-   background: #409eff;
+  width: 40%;
+  background: #409eff;
 }
 .buttonBox {
   margin-top: 20px;
-  display:flex;
+  display: flex;
   justify-content: center;
   align-items: center;
 }
 @media screen and (max-width: 500px) {
-  .workPlanCard ,.workPlanEdit {
+  .workPlanCard,
+  .workPlanEdit {
     width: 95vw;
   }
 }
